force-app/main/default/objects/ccrz__E_ConfigurationMeta__c/ccrz__E_ConfigurationMeta__c.object-meta.xml
<CustomObject>
    <label>CC Configuration Metadata</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC Configuration Metadata</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>