force-app/main/default/objects/ccrz__E_ConfigurationMeta__c/fields/ccrz__APIName__c.field-meta.xml
<CustomField>
    <fullName>ccrz__APIName__c</fullName>
    <description>The API name of the configuration for lookup purposes. For example, the configuration My Inventory Enabled might be mainv and used in code for lookup.  Must be unique within a given module but not universally unique.

Note that the APIName cannot uniquely identify the meta-data.</description>
    <externalId>true</externalId>
    <label>API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>