force-app/main/default/objects/ccrz__E_ConfigurationMeta__c/fields/ccrz__ConfigurationMetaId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ConfigurationMetaId__c</fullName>
    <description>External id.  Not used by B2B Commerce.</description>
    <externalId>true</externalId>
    <label>Configuration Meta Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>