force-app/main/default/objects/ccrz__E_ConfigurationMeta__c/fields/ccrz__ConfigurationModule__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ConfigurationModule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the module for this configuration.</description>
    <label>CC Configuration Module</label>
    <referenceTo>ccrz__E_ConfigurationModule__c</referenceTo>
    <relationshipName>ConfigurationMeta</relationshipName>
    <type>Lookup</type>
</CustomField>