force-app/main/default/objects/ccrz__E_ConfigurationMeta__c/fields/ccrz__Description__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Description__c</fullName>
    <description>Meta-data description visible to the user.</description>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>