force-app/main/default/objects/ccrz__E_ConfigurationMeta__c/fields/ccrz__ExternallySafe__c.field-meta.xml
<CustomField>
    <fullName>ccrz__ExternallySafe__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this configuration safe to be exported outside of B2B Commerce.
For example, a configuration to hide/display the cart amount in the header would be ExternallySafe = true. A configuration storing a connection string to an external system would be ExternallySafe = false.</description>
    <label>Externally Safe</label>
    <type>Checkbox</type>
</CustomField>